# gd-drop-alert

./: .gitignore  README.md  alarm_app.py  capture.py  clicker.py  logger.py  monitor.py  ocr.py  pyproject.toml  region_select.py  selftest.py  sound.py
.github/workflows/: build-exe.yml
